fixed bags that releated to layout

--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -22,7 +22,6 @@
       "ourcompany": "IMPEX CORP || Биздин компания",
       "catalogue": "IMPEX CORP || Каталог",
       "defaultDescription": "ЖЧК \"Импекс-Корп\" кытай, корея, БАЭ жана башка өлкөлөрдөн автоунааларды сатып алуу жана импорттоо боюнча кызмат көрсөтөт."
-
     }
   },
   "HomePage": {
@@ -82,7 +81,7 @@
       "text": "",
       "text2": "“Impex Corp“  - компаниясынын кынтыксыз кызматы - бул сиздин унааны ишенимдүү сатып алууга же биздин компаниядан буйрутма берүүгө жол."
     },
-    "bottomTitle": "Биздин компания ар түрдүү өлкөлөрдөн, анын ичинде Кытайдан, Кореядан, Япониядан, БАЭден, Грузиядан, Европадан жана АКШдан автоунааларды импорттоого жана экспорттоого адистешкен, кардарларга жогорку сапаттагы унаалардын кеңири тандоосуна мүмкүнчүлүк берет."
+    "bottomTitle": "Биздин компаниянын негизги ишмердүүлүгү Кытай, Япония, БАЭ, Грузия, Европа, АКШ сыяктуу өлкөлөрдөн унааларды импорттоо жана экспорттоо болуп саналат."
   },
   "footer": {
     "aboutus": {
