--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -78,10 +78,10 @@
     },
     "back": {
       "span": "“ Impex Corp “",
-      "text": "Безупречное обслуживание",
-      "text2": " - ваш путь к уверенной покупке автомобиля или заказу в нашей компании."
+      "text": "Безупречная работа  - залог вашей уверенности в ",
+      "text2": " сделке приобретая автомобиль или заказывая в "
     },
-    "bottomTitle": "Наша компания специализируется на импорте и экспорте автомобилей из различных стран, включая Китай, Корею, Японию, ОАЭ, Грузию, Европу и США, обеспечивая клиентам доступ к широкому выбору высококачественных транспортных средств."
+    "bottomTitle": " Основным видом деятельности нашей компании является импорт-экспорт автомобилей из таких стран как Китай, Япония, ОАЭ,Грузия, Европа, США "
   },
   "footer": {
     "aboutus": {
