--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -22,7 +22,6 @@
       "ourcompany": "IMPEX CORP || 我们的公司",
       "catalogue": "IMPEX CORP || 目录",
       "defaultDescription": "\"Impex-Corp\" LLC 提供從韓國、中國、阿聯酋等國家購買和進口汽車的服務。"
-      
     }
   },
   "HomePage": {
@@ -82,7 +81,7 @@
       "text": "無可挑剔的工作",
       "text2": "- 當您從「Impex Corp.」購買汽車或訂購時，保證您對交易充滿信心。"
     },
-    "bottomTitle": " 我公司的主要業務是從中國、日本、阿聯酋、喬治亞、歐洲、美國等國家進口和出口汽車"
+    "bottomTitle": " 我们公司的主要业务是从中国、日本、阿联酋、格鲁吉亚、欧洲和美国等国家进口和出口汽车。"
   },
   "footer": {
     "aboutus": {
