--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -81,7 +81,7 @@
       "text": "Seamless service from",
       "text2": " - your pathway to confident car purchases or orders with us."
     },
-    "bottomTitle": "Our company specializes in importing and exporting cars from various countries, including China, Korea, Japan, the UAE, Georgia, Europe, and the USA, providing clients with access to a wide selection of high-quality vehicles."
+    "bottomTitle": "The main activity of our company is the import and export of cars from countries such as China, Japan, UAE, Georgia, Europe, and the USA."
   },
   "footer": {
     "aboutus": {
