--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -78,7 +78,9 @@
     },
     "back": {
       "span": "“ Impex Corp “",
-      "text": "Безупречная работа  - залог вашей уверенности в ",
+      "text": "Безупречная работа - залог вашей уверенности в ",
+      "textMobile": "Безупречная работа",
+      "textMobile2": "залог вашей уверенности в сделке приобретая или заказывая автомобиль",
       "text2": " сделке приобретая автомобиль или заказывая в "
     },
     "bottomTitle": " Основным видом деятельности нашей компании является импорт-экспорт автомобилей из таких стран как Китай, Япония, ОАЭ,Грузия, Европа, США "
