--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -131,6 +131,14 @@
         "gas": "Газ",
         "hybrid": "Гибрид"
       },
+      "country": {
+        "title": "Өлкө",
+        "china": "Кытай",
+        "korea": "Корея",
+        "europe": "Европа",
+        "uae": "БАЭ",
+        "usa": "АКШ"
+      },
       "driveUnit": {
         "title": "Иштеткич"
       },
