--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -133,6 +133,14 @@
         "hybrid": "Гибрид",
         "gas": "Газ"
       },
+      "country": {
+        "title": "Страна",
+        "china": "Китай",
+        "korea": "Корея",
+        "europe": "Европа",
+        "uae": "ОАЭ",
+        "usa": "США"
+      },
       "driveUnit": {
         "title": "Привод"
       },
