--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -137,7 +137,9 @@
         "korea": "Korea",
         "europe": "Europe",
         "uae": "UAE",
-        "usa": "USA"
+        "usa": "USA",
+        "georgia": "Georgia",
+        "japan": "Japan"
       },
       "driveUnit": {
         "title": "Drive unit"
