--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -137,7 +137,9 @@
         "korea": "Корея",
         "europe": "Европа",
         "uae": "БАЭ",
-        "usa": "АКШ"
+        "usa": "АКШ",
+        "georgia": "Грузия",
+        "japan": "Жапония"
       },
       "driveUnit": {
         "title": "Иштеткич"
