--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -139,7 +139,9 @@
         "korea": "Корея",
         "europe": "Европа",
         "uae": "ОАЭ",
-        "usa": "США"
+        "usa": "США",
+        "georgia": "Грузия",
+        "japan": "Япония"
       },
       "driveUnit": {
         "title": "Привод"
