--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,7 +27,7 @@
   "HomePage": {
     "GreetingBlock": {
       "title": "Welcome to Impex Corp car dealership!",
-      "text": "Welcome to Impex Corp car dealership! Impex Corp is a company specializing in the automotive industry, offering its clients a wide range of products and services. Holding leading positions in the market, Impex Corp stands out for its key advantages, making it the perfect choice for buyers.",
+      "text": "Impex Corp is an auto company that offers its customers a wide range of products and services related to the automotive industry. Having become a leading player in the market, Impex Corp has several key advantages that make them an ideal choice for buyers",
       "buttonText": "More details"
     },
     "CatalogBlock": {
