--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -27,7 +27,7 @@
   "HomePage": {
     "GreetingBlock": {
       "title": "Добро пожаловать в автосалон Impex Corp!",
-      "text": "Impex Corp — это компания, специализирующаяся на автомобильной индустрии и предлагающая своим клиентам широкий ассортимент товаров и услуг. Занимая ведущие позиции на рынке, Impex Corp выделяется своими ключевыми преимуществами, которые делают её идеальным выбором для покупателей.",
+      "text": "Impex Corp — это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей",
       "buttonText": "Подробнее"
     },
     "CatalogBlock": {
