--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -28,7 +28,7 @@
   "HomePage": {
     "GreetingBlock": {
       "title": "Impex Corp унаасалонуна кош келиңиз!",
-      "text": "Impex Corp өз кардарларына өнүмдөрдүн жана кызматтардын кеңири спектрин сунуш кылган автоунаа тармагында адистешкен компания. Рынокто алдыңкы позицияны ээлеген Impex Corp өзүнүн негизги артыкчылыктары менен айырмаланып турат, бул анын сатып алуучулары үчүн идеалдуу тандоо.",
+      "text": "Impex Corp - бул өз кардарларына автомобиль өнөр жайы менен байланышкан өнүмдөрдү жана кызматтардын кеңири спектрин сунуш кылган автокомпания. Рынокто алдыңкы оюнчу болуп, Impex Corp бир нече негизги артыкчылыктарга ээ, алар сатып алуучулар үчүн идеалдуу тандоо болуп саналат.",
       "buttonText": "Кененирээк"
     },
     "CatalogBlock": {
