--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -98,7 +98,7 @@
       }
     },
     "branches": {
-      "name": "Address",
+      "name": "Our branches",
       "menu": {
         "address1": "77 Usenbaeva St. Bishkek"
       }
