--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -98,7 +98,7 @@
       }
     },
     "branches": {
-      "name": "Дарек",
+      "name": "Даректер",
       "menu": {
         "address1": "Усенбаева көч. 77, Бишкек"
       }
