--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -100,7 +100,7 @@
       }
     },
     "branches": {
-      "name": "Адрес",
+      "name": "Наши филиалы",
       "menu": {
         "address1": "ул. Усенбаева 77, Бишкек"
       }
