--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -98,7 +98,7 @@
       }
     },
     "branches": {
-      "name": "地址",
+      "name": "我們的分行",
       "menu": {
         "address1": "77 Usenbaeva st. Bishkek"
       }
