fix: electric cars card

--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -114,6 +114,10 @@
     "search": "Издөө",
     "title": "Каталог",
     "filter": "Фильтирлөө",
+    "hp": "Л.С",
+    "kwh": "кВт/ч",
+    "km": "км",
+    "liter": "л",
     "characteristics": {
       "catalog": "Марка",
       "model": "Модел",
@@ -133,13 +137,13 @@
       },
       "country": {
         "title": "Өлкө",
-        "china": "Кытай",
-        "korea": "Корея",
-        "europe": "Европа",
-        "uae": "БАЭ",
-        "usa": "АКШ",
-        "georgia": "Грузия",
-        "japan": "Жапония"
+        "CH": "Кытай",
+        "SK": "Корея",
+        "UR": "Европа",
+        "UAE": "БАЭ",
+        "USA": "АКШ",
+        "GG": "Грузия",
+        "JP": "Жапония"
       },
       "driveUnit": {
         "title": "Иштеткич"
@@ -186,7 +190,9 @@
         "title": "Мотор",
         "eng_type": "Мотор түрү",
         "power": "Күч",
-        "volume": "Объем (см³)",
+        "volume": "Объем (литр)",
+        "per_charge_milleage": "Бир заряд боюнча пробег",
+        "capacity": "Батарея сыйымдуулугу",
         "battery_capacity": "Батарея сыйымдуулугу",
         "consumption": "Куйукүйүүчү май керектөө"
       }
