--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -116,6 +116,10 @@
     "search": "Поиск",
     "title": "Каталог",
     "filter": "Фильтр",
+    "hp": "Л.С",
+    "kwh": "кВт/ч",
+    "km": "км",
+    "liter": "л",
     "characteristics": {
       "catalog": "Марка",
       "model": "Модель",
@@ -135,13 +139,13 @@
       },
       "country": {
         "title": "Страна",
-        "china": "Китай",
-        "korea": "Корея",
-        "europe": "Европа",
-        "uae": "ОАЭ",
-        "usa": "США",
-        "georgia": "Грузия",
-        "japan": "Япония"
+        "CH": "Китай",
+        "SK": "Корея",
+        "UR": "Европа",
+        "UAE": "ОАЭ",
+        "USA": "США",
+        "GG": "Грузия",
+        "JP": "Япония"
       },
       "driveUnit": {
         "title": "Привод"
@@ -188,7 +192,9 @@
         "title": "Двигатель",
         "eng_type": "Тип двигателя",
         "power": "Мощность",
-        "volume": "Объем в см³",
+        "capacity": "Ёмкость аккумулятора",
+        "per_charge_milleage": "Пробег на одном заряде",
+        "volume": "Объем в литрах",
         "battery_capacity": "Ёмкость батареи",
         "consumption": "Расход"
       }
