--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -178,6 +178,8 @@
     "titles": {
       "common": {
         "title": "Жалпы маалымат",
+        "characteristics": "Мүнөздөмөлөрү",
+        "share": "Бөлүшүү",
         "car_type": "Түрү",
         "number_doors": "Эшиктердин саны",
         "number_seats": "Орундуктардын саны",
