--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
   "notFoundText": "Извините, страница не найдена.",
   "notFoundData": "Извините, ничего не найдено.",
+  "notFoundDataCatalog": "Извините, в данный момент католог пуст, повторите попытку позже.",
   "backBtn": "Назад",
   "header": {
     "home": "Главная",
@@ -21,7 +22,7 @@
       "home": "IMPEX CORP || Импорт-экспорт автомобилей из ОАЭ, Кореи и Китая",
       "ourcompany": "IMPEX CORP || Наша компания",
       "catalogue": "IMPEX CORP || Каталог",
-      "defaultDescription": "ОсОО \"Импекс-Корп\" предоставляет услуги по покупке и импорту автомобилей из Кореи, Китая, ОАЭ и других стран."
+      "defaultDescription": "ОсОО \"Импекс-Корп\" предоставляет услуги по покупке и импорту авто из Кореи, Китая, ОАЭ и других стран."
     }
   },
   "HomePage": {
@@ -61,7 +62,7 @@
     }
   },
   "AboutUs": {
-    "main_title": "Компания \"Impex Corp\" предоставляет услуги по покупке и импорту автомобилей из Кореи, Китая и других стран.",
+    "main_title": "Компания «Impex Corp»  предоставляет услуги по покупке и импорту авто из Кореи, Китая и других стран.",
     "buttonText": "Позвонить",
     "title": "Наши преимущества",
     "card1": {
